<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/drawer_dashboard"
            android:checked="true" />

        <item
            android:id="@+id/nav_screener"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/drawer_portfolio" />

        <item
            android:id="@+id/nav_assets"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/drawer_assets" />

        <item
            android:id="@+id/nav_deepdive"
            android:icon="@android:drawable/ic_menu_zoom"
            android:title="@string/drawer_deepdive" />

        <item
            android:id="@+id/nav_spaces"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/drawer_spaces" />

    </group>

    <item android:title="@string/drawer_settings_header">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/drawer_settings" />

            <item
                android:id="@+id/nav_language"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/drawer_language" />

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/drawer_sign_out" />
        </menu>
    </item>

</menu>